<resources>
    <string name="app_name">CitizensAssist</string>
    <string name="raise_a_complaint">Raise a complaint</string>
    <string name="category">Select Category</string>
    <string name="view_history">View history</string>
    <string name="view_all_issues">View all issues</string>
    <string name="view_trends">View trends</string>
    <string name="my_profile">My profile</string>
    <string name="complaint_image">ComplaintImage</string>
    <string name="capture_image">CAPTURE IMAGE</string>
    <string name="submit">Submit</string>
    <string name="comments">Comments</string>
    <string name="title_activity_maps">Map</string>
    <string name="tag_location">TAG LOCATION</string>
    <string name="title_activity_location_fetcher">Map</string>
    <string name="title_activity_issue_submit_success">Random</string>
    <string name="next">Next</string>
    <string name="title_activity_add_comments">AddComments</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="add_comment">Add Comments</string>
    <string name="about_us">About us</string>
    <string name="pothole">Pothole</string>
    <string name="malfunctioning_traffic_signal">Malfunctioning traffic signal</string>
    <string name="street_lights">Street Lights</string>
    <string name="roadside_garbage">Roadside Garbage</string>
    <string name="bad_roads">Bad Roads</string>
    <string name="traffic_signals">Traffic signals</string>
    <string name="clogged_drains">Clogged Drains</string>
    <string name="clogged_drain_4th_block_jayanagar">Clogged Drain : 4th Block Jayanagar</string>
    <string name="bad_street_lighting_3rd_block_koramangala">Bad Street Lighting : 3rd Block
        Koramangala</string>
    <string name="statistics">Statistics</string>
    <string name="pothole_3rd_block_koramangala">Pothole : 3rd Block Koramangala</string>
    <string name="home">Home</string>
    <string name="discuss_complaint">Discuss Complaint</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="complaints_raised_using_citizens_assist">10430 pothole complaints RAISED using
        citizens assist</string>
    <string name="complaints_fixed">2034 FIXED</string>
    <string name="numbers">Numbers</string>
    <string name="pie_chart">PieChart</string>
    <string name="need_a_more_detailed_search">Need a more detailed search?</string>
    <string name="statistics_title">STATISTICS</string>
    <string name="customize_search">Customize your search</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="select_area">Select Area</string>
    <string name="select_issue">Select Issue</string>
    <string name="you_searched_for_potholes_in_kormangala_bangalore_karnataka">You searched for Potholes in Kormangala, Bangalore, Karnataka.</string>
    <string name="fixed_333">FIXED: 333</string>
    <string name="in_progress_200">IN PROGRESS: 200</string>
    <string name="estimated_600">ESTIMATED: 600</string>
    <string name="open_1000">OPEN : 1000</string>
    <string name="_2133_pothole_complaints">2133 POTHOLE COMPLAINTS</string>
    <string name="potholes">Potholes</string>
    <string name="koramangala">Koramangala</string>
    <string name="bangalore">Bangalore</string>
    <string name="karnataka">Karnataka</string>
    <string name="summary"><u>Click here to view a Summary of the complaint</u></string>
    <string name="othersSay"><u>Click here to see what others are saying about the issue</u></string>
</resources>
