<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4281a4"
        android:title="@string/statistics_title"
        android:titleTextColor="#FFFFFF"
        tools:targetApi="m" />

    <ImageView
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view"
        android:contentDescription="@string/numbers"
        android:src="@drawable/notstats" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stats"
        android:contentDescription="@string/pie_chart"
        android:src="@drawable/pie_chart" />

    <Button
        android:id="@+id/detail_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#FFE66D"
        android:text="@string/need_a_more_detailed_search" />
</RelativeLayout>