<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/raise_a_complaint"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary" />


    <TextView
        android:id="@+id/captureImageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/captureImageButton"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="46dp"
        android:text="@string/capture_image"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/captureImageButton"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_above="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="46dp"
        android:background="@drawable/capture_image_icon"
        android:contentDescription="@string/capture_image" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/nextButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/complaint_image"
        android:src="@drawable/image_icon" />


    <Button
        android:id="@+id/nextButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:background="#00BCCD"
        android:textColor="#FFFFFF"
        android:text="@string/next" />

</RelativeLayout>