<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.tw.awayday.citizensassist.SearchResultActivity">

    <TextView
        android:id="@+id/search_content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/you_searched_for_potholes_in_kormangala_bangalore_karnataka"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/total_complaints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_content_view"
        android:layout_marginTop="20sp"
        android:background="#4281a4"
        android:padding="5dp"
        android:text="@string/_2133_pothole_complaints"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/open_complaints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_complaints"
        android:layout_marginTop="20sp"
        android:background="#4281a4"
        android:padding="5dp"
        android:text="@string/open_1000"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/estimated_complaints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/open_complaints"
        android:layout_marginTop="20sp"
        android:background="#4281a4"
        android:padding="5dp"
        android:text="@string/estimated_600"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/in_progress_complaints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/estimated_complaints"
        android:layout_marginTop="20sp"
        android:background="#4281a4"
        android:padding="5dp"
        android:text="@string/in_progress_200"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/fixed_complaints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_progress_complaints"
        android:layout_marginTop="20sp"
        android:background="#4281a4"
        android:padding="5dp"
        android:text="@string/fixed_333"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="jelly_bean_mr1" />

    <Button

        android:id="@+id/new_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/home_page_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:background="#00BCCD"
        android:text="NEW SEARCH"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/home_page_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#00BCCD"
        android:text="HOME PAGE"
        android:textColor="#FFFFFF" />

</RelativeLayout>