<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/raise_an_issue"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="34dp"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/complaint_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/category"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/category"
        android:layout_toRightOf="@+id/category" />

    <TextView
        android:id="@+id/tagLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tagLocationButton"
        android:layout_alignLeft="@+id/tagLocationButton"
        android:layout_alignStart="@+id/tagLocationButton"
        android:layout_marginBottom="28dp"
        android:text="   Tag Location"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <ImageButton
        android:id="@+id/tagLocationButton"
        android:layout_width="140dip"
        android:layout_height="140dip"
        android:layout_alignBottom="@+id/captureImageButton"
        android:layout_alignLeft="@+id/category"
        android:layout_alignStart="@+id/category"
        android:background="@mipmap/tag_location_icon" />

    <TextView
        android:id="@+id/captureImageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/captureImageButton"
        android:layout_alignStart="@+id/captureImageButton"
        android:layout_alignTop="@+id/tagLocationText"
        android:text="    Capture Image"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/captureImageButton"
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:layout_alignEnd="@+id/complaint_spinner"
        android:layout_alignRight="@+id/complaint_spinner"
        android:layout_below="@+id/category"
        android:layout_marginTop="74dp"
        android:background="@mipmap/capture_image_icon" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/image_icon"
        android:adjustViewBounds="true"
        android:contentDescription="@string/complaint_image"
        android:layout_above="@+id/submitButton"
        android:layout_toRightOf="@+id/tagLocationText"
        android:layout_toEndOf="@+id/tagLocationText"
        android:layout_marginBottom="28dp" />


    <Button
        android:id="@+id/submitButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/complaint_spinner"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/complaint_spinner"
        android:text="@string/submit" />

</RelativeLayout>
